# LightDotSo

./: .clippy.toml  .contracts-size  .contracts-size-e  .depcheckrc.yml  .dockerignore  .editorconfig  .env.example  .eslintignore  .eslintrc.js  .gas-snapshot  .gitignore  .gitmodules  .hadolint.yml  .kodiak.toml  .kube-linter.yml  .license-check-and-add-config.json  .lintstagedrc.js  .ncurc.yml  .npmpackagejsonlintrc.json  .npmrc  .prettierignore  .prettierrc.js  .release-it.json  .release-please-config.json  .release-please-manifest.json  .slather.yml  .solhint.json  .storage-layouts  .swift-format  .swiftlint.yml  .taplo.toml  .textlintrc.json  ACKNOWLEDGEMENTS.md  Brewfile  Brewfile.lock.json  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT.md  (+61 more)
crates/app/: Cargo.toml
crates/app/src/: constants.rs  lib.rs  utils.rs
crates/axum/: Cargo.toml
crates/axum/src/: admin.rs  api.rs  auth.rs  authentication.rs  constants.rs  cookies.rs  error.rs  exporter.rs  headers.rs  indexer.rs  internal.rs  lib.rs  prometheus.rs  result.rs  rpc.rs  sessions.rs  state.rs  tags.rs  traits.rs  types.rs  utils.rs
crates/axum/src/routes/: auth.rs  check.rs  configuration.rs  feedback.rs  health.rs  metrics.rs  mod.rs  notification.rs  paymaster.rs  paymaster_operation.rs  portfolio.rs  signature.rs  support_request.rs  token.rs  token_price.rs  transaction.rs  user.rs  user_operation.rs  wallet.rs  wallet_settings.rs  wallets.rs
crates/billing/: Cargo.toml
crates/billing/src/: billing.rs  config.rs  lib.rs
crates/bundler/: Cargo.toml  README.md
crates/bundler/src/: args.rs  bundler.rs  cli.rs  config.rs  constants.rs  errors.rs  eth.rs  eth_api.rs  lib.rs  opts.rs  provider.rs  rpc.rs  server.rs  types.rs  uo_pool.rs  utils.rs
crates/bundler/src/cli/: commands.rs  mod.rs
crates/client/: Cargo.toml  build.rs
crates/client/specs/: keeper.json
crates/client/src/: constants.rs  crypto.rs  lib.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  serialization.rs  traits.rs  utils.rs
crates/consumer/: Cargo.toml
crates/consumer/src/: config.rs  consumer.rs  lib.rs  state.rs
crates/consumer/src/topics/: activity.rs  billing_operation.rs  covalent.rs  error_transaction.rs  interpretation.rs  mod.rs  node.rs  notification.rs  paymaster_operation.rs  portfolio.rs  routescan.rs  transaction.rs  unknown.rs  user_operation.rs
crates/consumer/tests/: main.rs
crates/contracts/: Cargo.toml
crates/contracts/abi/: ERC1271.json  EntryPoint.json  LightDAG.json  LightPaymaster.json  LightWallet.json  LightWalletFactory.json
crates/contracts/src/: address.rs  constants.rs  create2.rs  dag.rs  entrypoint.rs  entrypoint_v060.rs  entrypoint_v070.rs  erc1271.rs  lib.rs  light_wallet.rs  merkle_tree.rs  packed_user_operation.rs  paymaster.rs  provider.rs  tracer.rs  types.rs  user_operation.rs  utils.rs
crates/core/: .gitignore  Cargo.toml  build.rs  package.json
crates/core/src/: LightWalletCore.udl  lib.rs
crates/covalent/: .gitignore  Cargo.toml
crates/covalent/src/: constants.rs  lib.rs  types.rs
crates/covalent/tests/it/: main.rs  test.rs
crates/dag/: Cargo.toml
crates/dag/src/: lib.rs  main.rs
crates/db/: Cargo.toml
crates/db/src/: db.rs  error.rs  lib.rs  types.rs
crates/db/src/models/: activity.rs  billing_operation.rs  interpretation.rs  log.rs  mod.rs  paymaster_operation.rs  portfolio.rs  token_price.rs  transaction.rs  user_operation.rs  wallet.rs  wallet_balance.rs
crates/db/tests/it/: interpretation.rs  main.rs  transaction.rs  user_operation.rs
crates/discord/: Cargo.toml
crates/discord/src/: channel.rs  config.rs  discord.rs  lib.rs
crates/discord/tests/it/: main.rs
crates/gas/: Cargo.toml
crates/gas/src/: config.rs  error.rs  gas.rs  gas_api.rs  lib.rs  server.rs  types.rs
crates/gas/src/chains/: _1.rs  _1337.rs  ethereum.rs  mod.rs  polygon.rs
crates/graphql/: Cargo.toml  build.rs
crates/graphql/schemas/: graph.graphql
crates/graphql/src/: constants.rs  lib.rs  traits.rs  utils.rs
crates/graphql/src/polling/: light_wallets.rs  min_block.rs  mod.rs  user_operation.rs  user_operations.rs
crates/graphql/src/snapshots/: lightdotso_graphql__test__running_query.snap  lightdotso_graphql__test__snapshot_test_query.snap
crates/graphql/src/wallets/: mod.rs
crates/graphql/tests/it/: run.rs
crates/hyper/: Cargo.toml
crates/hyper/src/: lib.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: config.rs  constants.rs  db.rs  error.rs  indexer.rs  lib.rs  namespace.rs
crates/indexer/tests/it/: indexer.rs  main.rs
crates/interpreter/: Cargo.toml
crates/interpreter/src/: adapter.rs  config.rs  constants.rs  interpreter.rs  lib.rs  types.rs
crates/interpreter/src/adapters/: mod.rs
crates/interpreter/src/constants/: abis.rs  actions.rs  events.rs  mod.rs
crates/interpreter/tests/it/: erc20_transfer.rs  eth_transfer.rs  main.rs
crates/jsonrpsee/: Cargo.toml
crates/jsonrpsee/src/: error.rs  lib.rs  rpc.rs  types.rs
crates/kafka/: Cargo.toml
crates/kafka/src/: lib.rs  namespace.rs  traits.rs
crates/kafka/src/topics/: activity.rs  billing_operation.rs  covalent.rs  interpretation.rs  mod.rs  node.rs  notification.rs  paymaster_operation.rs  portfolio.rs  (+3 more)
crates/keychain/: Cargo.toml
crates/keychain/src/: lib.rs
crates/node/: Cargo.toml
crates/node/src/: config.rs  lib.rs  node.rs
crates/notifier/: Cargo.toml
crates/notifier/src/: config.rs  constants.rs  key.rs  lib.rs  notifier.rs  types.rs  utils.rs
crates/opentelemetry/: Cargo.toml
crates/opentelemetry/src/: consumer.rs  custom.rs  lib.rs  middleware.rs  polling.rs
crates/paymaster/: Cargo.toml
crates/paymaster/src/: billing_operation.rs  config.rs  constants.rs  contract.rs  lib.rs  paymaster.rs  paymaster_api.rs  server.rs  types.rs  utils.rs
crates/polling/: Cargo.toml
crates/polling/src/: config.rs  constants.rs  lib.rs  polling.rs
crates/prisma/: .gitignore  Cargo.toml
crates/prisma-postgres/: .gitignore  Cargo.toml
crates/prisma-postgres/src/: lib.rs
crates/prisma/src/: lib.rs  main.rs  postgres.rs
(+4591 files in other folders)
