[workspace]
  resolver = "2"

  members = [
    "apps/desktop/src-tauri",
    "bin",
    "crates/app",
    "crates/autometrics",
    "crates/axum",
    "crates/bundler",
    "crates/common",
    "crates/constants",
    "crates/consumer",
    "crates/core",
    "crates/contracts",
    "crates/db",
    "crates/discord",
    "crates/gas",
    "crates/graphql",
    "crates/jsonrpsee",
    "crates/indexer",
    "crates/kafka",
    "crates/keychain",
    "crates/notifier",
    "crates/polling",
    "crates/opentelemetry",
    "crates/paymaster",
    "crates/prometheus",
    "crates/prisma",
    "crates/redis",
    "crates/rpc",
    "crates/simulator",
    "crates/solutions",
    "crates/tauri",
    "crates/telegram",
    "crates/tracing",
    "crates/utils",
    "tools/embedded-prisma",
    "tools/embedded-scopelint",
    "tools/embedded-uniffi-bindgen",
  ]

  default-members = ["bin"]

  [workspace.package]
    version = "0.1.0"
    edition = "2021"
    rust-version = "1.71"
    license = "AGPL-3.0-or-later"
    homepage = "https://github.com/LightDotSo/LightDotSo"
    repository = "https://github.com/LightDotSo/LightDotSo"

# Ref: https://www.uffizzi.com/blog/optimizing-rust-builds-for-faster-github-actions-pipelines
[profile.dev]
  debug = 0
  opt-level = 0
  codegen-units = 16

[profile.release]
  opt-level = 2

[workspace.dependencies]
  anvil = { git = "https://github.com/foundry-rs/foundry", rev = "236208f72a0af26aa0446336132e05edb7024ca6", package = "anvil" }
  anyhow = "1.0.70"
  async-stream = "0.3.5"
  async-trait = "0.1.73"
  autometrics = { version = "*", features = [
    "opentelemetry-0_20",
    "prometheus-exporter",
  ], default-features = false }
  axum = { version = "0.6.16", features = ["headers", "macros", "ws"] }
  backon = "0.4.1"
  base64 = "0.21.3"
  byteorder = "1.4.3"
  chrono = "0.4.26"
  clap = "4.3.12"
  const-hex = "1.9.1"
  dotenvy = "0.15"
  enumset = "1.1.2"
  ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "fa3017715a298728d9fb341933818a5d0d84c2dc", package = "ethers" }
  ethers-core = { git = "https://github.com/gakonst/ethers-rs", rev = "fa3017715a298728d9fb341933818a5d0d84c2dc", package = "ethers-core" }
  ethers-providers = { git = "https://github.com/gakonst/ethers-rs", rev = "fa3017715a298728d9fb341933818a5d0d84c2dc", package = "ethers-providers" }
  ethers-main = { git = "https://github.com/gakonst/ethers-rs", package = "ethers" }
  eyre = "0.6.8"
  foundry-config = { git = "https://github.com/foundry-rs/foundry", rev = "236208f72a0af26aa0446336132e05edb7024ca6", package = "foundry-config" }
  foundry-evm = { git = "https://github.com/foundry-rs/foundry", rev = "236208f72a0af26aa0446336132e05edb7024ca6", package = "foundry-evm" }
  futures = "0.3.28"
  futures-util = "0.3.28"
  http = "0.2.8"
  http-body = "0.4.5"
  hyper = { version = "0.14", features = ["full"] }
  hyper-rustls = "0.24.1"
  insta = "1.17"
  js-sys = "=0.3.64"
  jsonrpsee = { version = "0.20.1", features = ["server", "macros", "client"] }
  lazy_static = "1.4.0"
  lightdotso-app = { path = "./crates/app" }
  lightdotso-autometrics = { path = "./crates/autometrics" }
  lightdotso-axum = { path = "./crates/axum" }
  lightdotso-bundler = { path = "./crates/bundler" }
  lightdotso-common = { path = "./crates/common" }
  lightdotso-consumer = { path = "./crates/consumer" }
  lightdotso-constants = { path = "./crates/constants" }
  lightdotso-contracts = { path = "./crates/contracts" }
  lightdotso-discord = { path = "./crates/discord" }
  lightdotso-db = { path = "./crates/db" }
  lightdotso-gas = { path = "./crates/gas" }
  lightdotso-graphql = { path = "./crates/graphql" }
  lightdotso-indexer = { path = "./crates/indexer" }
  lightdotso-jsonrpsee = { path = "./crates/jsonrpsee" }
  lightdotso-kafka = { path = "./crates/kafka" }
  lightdotso-keychain = { path = "./crates/indexer" }
  lightdotso-notifier = { path = "./crates/notifier" }
  lightdotso-opentelemetry = { path = "./crates/opentelemetry" }
  lightdotso-paymaster = { path = "./crates/paymaster" }
  lightdotso-polling = { path = "./crates/polling" }
  lightdotso-prometheus = { path = "./crates/prometheus" }
  lightdotso-prisma = { path = "./crates/prisma" }
  lightdotso-redis = { path = "./crates/redis" }
  lightdotso-rpc = { path = "./crates/rpc" }
  lightdotso-solutions = { path = "./crates/solutions" }
  lightdotso-simulator = { path = "./crates/simulator" }
  lightdotso-tauri = { path = "./crates/tauri" }
  lightdotso-telegram = { path = "./crates/telegram" }
  lightdotso-tracing = { path = "./crates/tracing" }
  lightdotso-utils = { path = "./crates/utils" }
  opentelemetry = { version = "0.20.0", features = ["metrics", "rt-tokio"] }
  opentelemetry-otlp = { version = "0.13.0", features = [
    "grpc-tonic",
    "reqwest-client",
    "tls",
    "tls-roots",
  ] }
  opentelemetry-prometheus = "0.13.0"
  opentelemetry_sdk = { version = "0.20.0", features = ["metrics"] }
  once_cell = "1.8.0"
  prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.10", features = [
    "migrations",
    "mocking",
    "sqlite",
    "sqlite-create-many",
  ] }
  prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.10", features = [
    "migrations",
    "mocking",
    "sqlite",
    "sqlite-create-many",
  ] }
  prometheus = "0.13.3"
  rand = "0.8.5"
  rdkafka = { version = "0.33.2", features = ["sasl", "ssl"] }
  redb = "1.0.5"
  reqwest = { version = "0.11.20", features = ["blocking", "json"] }
  revm = { version = "3", default-features = false, features = [
    "std",
    "serde",
    "memory_limit",
    "optional_eip3607",
    "optional_block_gas_limit",
    "optional_no_base_fee",
  ] }
  rundler-provider = { git = "https://github.com/alchemyplatform/rundler", rev = "b253c4870b069ffdc16a8ca936fe9ad24e1ac44d", package = "rundler-provider" }
  rundler-sim = { git = "https://github.com/alchemyplatform/rundler", rev = "b253c4870b069ffdc16a8ca936fe9ad24e1ac44d", package = "rundler-sim" }
  rundler-types = { git = "https://github.com/alchemyplatform/rundler", rev = "b253c4870b069ffdc16a8ca936fe9ad24e1ac44d", package = "rundler-types" }
  rundler-utils = { git = "https://github.com/alchemyplatform/rundler", rev = "b253c4870b069ffdc16a8ca936fe9ad24e1ac44d", package = "rundler-utils" }
  serde = "1.0.183"
  serde_json = "1.0.104"
  spki = "0.7.2"
  tauri = { version = "1.4", features = ["shell-open"] }
  tauri-build = { version = "1.4", features = [] }
  thiserror = "1.0.40"
  tokio = { version = "1", features = ["full"] }
  tonic = { version = "0.10.0", features = ["tls", "tls-roots"] }
  tower = { version = "0.4.12" }
  tower_governor = { version = "0.1.0", features = ["tracing"] }
  tower-http = { version = "0.4", features = [
    "trace",
    "auth",
    "request-id",
    "catch-panic",
    "cors",
    "set-header",
    "limit",
    "sensitive-headers",
  ] }
  tracing = "0.1.37"
  tracing-test = "0.2.4"
  uniffi = "0.24.2"
  uniffi_macros = "0.24.2"
  uniffi_build = { version = "0.24.2", features = ["builtin-bindgen"] }
  uuid = { version = "1.3.4", features = ["v4", "fast-rng", "serde"] }
  url = { version = "2.4", default-features = false }
