[workspace]
  resolver = "2"

  members = [
    "apps/desktop/src-tauri",
    "bin",
    "crates/app",
    "crates/autometrics",
    "crates/axum",
    "crates/billing",
    "crates/client",
    "crates/common",
    "crates/constants",
    "crates/consumer",
    "crates/core",
    "crates/contracts",
    "crates/covalent",
    "crates/dag",
    "crates/db",
    "crates/discord",
    "crates/gas",
    "crates/graphql",
    "crates/hyper",
    "crates/indexer",
    "crates/interpreter",
    "crates/jsonrpsee",
    "crates/kafka",
    "crates/keychain",
    "crates/node",
    "crates/notifier",
    "crates/opentelemetry",
    "crates/polling",
    "crates/pusher",
    "crates/paymaster",
    "crates/prometheus",
    "crates/prisma",
    "crates/redis",
    "crates/routescan",
    "crates/rpc",
    "crates/sequence",
    "crates/signer",
    "crates/simulator",
    "crates/tauri",
    "crates/telegram",
    "crates/tracing",
    "crates/utils",
    "tools/embedded-prisma",
    "tools/embedded-scopelint",
    "tools/embedded-uniffi-bindgen",
  ]

  default-members = ["bin"]

  [workspace.package]
    version = "0.1.0"
    edition = "2021"
    rust-version = "1.80"
    license = "Apache-2.0"
    homepage = "https://github.com/LightDotSo/LightDotSo"
    repository = "https://github.com/LightDotSo/LightDotSo"

# Ref: https://www.uffizzi.com/blog/optimizing-rust-builds-for-faster-github-actions-pipelines
[profile.dev]
  debug = 0
  opt-level = 0
  codegen-units = 16

[profile.release]
  opt-level = 2

[workspace.dependencies]
  alloy = { version = "0.2.1", features = ["full", "provider-debug-api"] }
  anyhow = "1.0.70"
  async-stream = "0.3.5"
  async-trait = "0.1.73"
  autometrics = { version = "*", features = [
    "opentelemetry-0_20",
    "prometheus-exporter",
  ], default-features = false }
  axum = { version = "0.6.16", features = ["headers", "macros", "ws"] }
  backon = "0.4.1"
  base64 = "0.21.3"
  byteorder = "1.4.3"
  chrono = { version = "0.4.38", default-features = false, features = [
    "clock",
    "std",
  ] }
  clap = "4.3.12"
  dotenvy = "0.15"
  enumset = "1.1.2"
  eyre = "0.6.8"
  foundry-config = { git = "https://github.com/foundry-rs/foundry", rev = "3f15f9a83377daac583ff87f900cb6d86ee4499f", package = "foundry-config" }
  foundry-evm = { git = "https://github.com/foundry-rs/foundry", rev = "3f15f9a83377daac583ff87f900cb6d86ee4499f", package = "foundry-evm" }
  foundry-evm-traces = { git = "https://github.com/foundry-rs/foundry", rev = "3f15f9a83377daac583ff87f900cb6d86ee4499f", package = "foundry-evm-traces" }
  futures = "0.3.28"
  futures-util = "0.3.28"
  http = "1"
  http-body = "0.4.5"
  hyper = { version = "0.14", features = ["full"] }
  hyper-rustls = "0.24.1"
  insta = "1.17"
  js-sys = "=0.3.64"
  jsonrpsee = { version = "0.20.1", features = ["server", "macros", "client"] }
  lazy_static = "1.4.0"
  lightdotso-app = { path = "./crates/app" }
  lightdotso-autometrics = { path = "./crates/autometrics" }
  lightdotso-axum = { path = "./crates/axum" }
  lightdotso-billing = { path = "./crates/billing" }
  lightdotso-client = { path = "./crates/client" }
  lightdotso-common = { path = "./crates/common" }
  lightdotso-consumer = { path = "./crates/consumer" }
  lightdotso-constants = { path = "./crates/constants" }
  lightdotso-contracts = { path = "./crates/contracts" }
  lightdotso-covalent = { path = "./crates/covalent" }
  lightdotso-dag = { path = "./crates/dag" }
  lightdotso-discord = { path = "./crates/discord" }
  lightdotso-db = { path = "./crates/db" }
  lightdotso-gas = { path = "./crates/gas" }
  lightdotso-graphql = { path = "./crates/graphql" }
  lightdotso-hyper = { path = "./crates/hyper" }
  lightdotso-indexer = { path = "./crates/indexer" }
  lightdotso-interpreter = { path = "./crates/interpreter" }
  lightdotso-jsonrpsee = { path = "./crates/jsonrpsee" }
  lightdotso-kafka = { path = "./crates/kafka" }
  lightdotso-keychain = { path = "./crates/indexer" }
  lightdotso-node = { path = "./crates/node" }
  lightdotso-notifier = { path = "./crates/notifier" }
  lightdotso-opentelemetry = { path = "./crates/opentelemetry" }
  lightdotso-paymaster = { path = "./crates/paymaster" }
  lightdotso-pusher = { path = "./crates/pusher" }
  lightdotso-polling = { path = "./crates/polling" }
  lightdotso-prometheus = { path = "./crates/prometheus" }
  lightdotso-prisma = { path = "./crates/prisma" }
  lightdotso-redis = { path = "./crates/redis" }
  lightdotso-routescan = { path = "./crates/routescan" }
  lightdotso-rpc = { path = "./crates/rpc" }
  lightdotso-sequence = { path = "./crates/sequence" }
  lightdotso-signer = { path = "./crates/signer" }
  lightdotso-simulator = { path = "./crates/simulator" }
  lightdotso-tauri = { path = "./crates/tauri" }
  lightdotso-telegram = { path = "./crates/telegram" }
  lightdotso-tracing = { path = "./crates/tracing" }
  lightdotso-utils = { path = "./crates/utils" }
  opentelemetry = { version = "0.20.0", features = ["metrics", "rt-tokio"] }
  opentelemetry-otlp = { version = "0.13.0", features = [
    "grpc-tonic",
    "reqwest-client",
    "tls",
    "tls-roots",
  ] }
  opentelemetry-prometheus = "0.13.0"
  opentelemetry-semantic-conventions = "0.13.0"
  opentelemetry_sdk = { version = "0.20.0", features = ["metrics"] }
  once_cell = "1.8.0"
  pin-project-lite = "0.2.13"
  prettyplease = "0.2.15"
  prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", features = [
    "migrations",
    "mocking",
    "sqlite",
    "sqlite-create-many",
  ] }
  prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", features = [
    "migrations",
    "mocking",
    "sqlite",
    "sqlite-create-many",
  ] }
  prometheus = "0.13.3"
  rand = "0.8.5"
  rdkafka = { version = "0.33.2", features = ["sasl", "ssl"] }
  redb = "1.0.5"
  regress = "0.4.1"
  reqwest = { version = "0.12", features = [
    "blocking",
    "json",
    "stream",
  ], default-features = false }
  reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", rev = "98b214f63dcbe11a357ec85532306c3756552eba", package = "reth-rpc-types" }
  revm = { git = "https://github.com/bluealloy/revm", rev = "caadc71", default-features = false }
  revm-primitives = { git = "https://github.com/bluealloy/revm", rev = "caadc71", default-features = false }
  revm-inspectors = { version = "0.5", features = ["serde"] }
  rustc-hex = "2.1.0"
  serde = "1.0.183"
  serde_json = "1.0.113"
  serde_yaml = "0.9"
  spki = "0.7.2"
  strum = "0.25"
  strum_macros = "0.25"
  syn = "2.0"
  tauri = { version = "1.4", features = ["shell-open"] }
  tauri-build = { version = "1.4", features = [] }
  thiserror = "1.0.40"
  time = "0.3.36"
  tokio = { version = "1.39.3", features = ["full"] }
  tonic = { version = "0.10.0", features = ["tls", "tls-roots"] }
  tower = { version = "0.4.12" }
  tower-cookies = "0.9.0"
  tower_governor = { git = "https://github.com/benwis/tower-governor", rev = "d6cb6acf904207aec1c2618592a8bb469e932cad", package = "tower_governor" }
  tower-http = { version = "0.4", features = [
    "trace",
    "auth",
    "request-id",
    "catch-panic",
    "cors",
    "set-header",
    "limit",
    "sensitive-headers",
  ] }
  tower-sessions = "0.5.0"
  tower-sessions-core = "0.5.0"
  tracing = "0.1.37"
  tracing-test = "0.2.4"
  uniffi = "0.24.2"
  uniffi_macros = "0.24.2"
  uniffi_build = { version = "0.24.2", features = ["builtin-bindgen"] }
  uuid = { version = "1.3.4", features = ["v4", "fast-rng", "serde"] }
  url = { version = "2.4", default-features = false }

[patch.crates-io]
  alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
  alloy-contract = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
  alloy-eips = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
  alloy-genesis = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
  alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
  alloy-network = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
  alloy-provider = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
  alloy-pubsub = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
  alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
  alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
  alloy-serde = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
  alloy-signer = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
  alloy-signer-aws = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
  alloy-signer-gcp = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
  alloy-signer-ledger = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
  alloy-signer-local = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
  alloy-signer-trezor = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
  alloy-transport = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
  alloy-transport-http = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
  alloy-transport-ipc = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
  alloy-transport-ws = { git = "https://github.com/alloy-rs/alloy", rev = "511ae98" }
  revm = { git = "https://github.com/bluealloy/revm", rev = "caadc71" }
  revm-primitives = { git = "https://github.com/bluealloy/revm", rev = "caadc71" }
