[workspace]
  resolver = "2"

  members = [
    "apps/desktop/src-tauri",
    "bin",
    "crates/app",
    "crates/autometrics",
    "crates/axum",
    "crates/billing",
    "crates/client",
    "crates/common",
    "crates/constants",
    "crates/consumer",
    "crates/core",
    "crates/contracts",
    "crates/covalent",
    "crates/dag",
    "crates/db",
    "crates/discord",
    "crates/gas",
    "crates/graphql",
    "crates/hyper",
    "crates/indexer",
    "crates/interpreter",
    "crates/jsonrpsee",
    "crates/kafka",
    "crates/keychain",
    "crates/node",
    "crates/notifier",
    "crates/opentelemetry",
    "crates/polling",
    "crates/pusher",
    "crates/paymaster",
    "crates/prometheus",
    "crates/prisma",
    "crates/prisma-mysql",
    "crates/prisma-postgres",
    "crates/redis",
    "crates/routescan",
    "crates/rpc",
    "crates/sequence",
    "crates/signer",
    "crates/simulator",
    "crates/sqlx",
    "crates/state",
    "crates/tauri",
    "crates/telegram",
    "crates/tracing",
    "crates/utils",
    # "tools/embedded-bulloak",
    "tools/embedded-prisma",
    "tools/embedded-scopelint",
    "tools/embedded-uniffi-bindgen",
  ]

  default-members = ["bin"]

  [workspace.package]
    version = "0.2.7"
    edition = "2021"
    rust-version = "1.80"
    license = "Apache-2.0"
    homepage = "https://github.com/LightDotSo/LightDotSo"
    repository = "https://github.com/LightDotSo/LightDotSo"

# Ref: https://www.uffizzi.com/blog/optimizing-rust-builds-for-faster-github-actions-pipelines
[profile.dev]
  debug = 0
  opt-level = 0
  codegen-units = 16

[profile.release]
  opt-level = 2

  [workspace.dependencies]
    alloy = { version = "0.5.2", features = ["full", "provider-debug-api"] }
    anyhow = "1.0.90"
    async-stream = "0.3.5"
    async-trait = "0.1.73"
    autometrics = { version = "2.0.0", features = [
      "opentelemetry",
      "prometheus-exporter",
    ], default-features = false }
    axum = { version = "0.7.5", features = ["macros", "ws"] }
    backon = "1.2.0"
    base64 = "0.22.1"
    byteorder = "1.4.3"
    chrono = { version = "0.4.38", default-features = false, features = [
      "clock",
      "std",
    ] }
    clap = { version = "4.5.20", features = ["derive", "env"] }
    dotenvy = "0.15.7"
    enumset = "1.1.2"
    eyre = "0.6.8"
    foundry-config = { git = "https://github.com/foundry-rs/foundry", rev = "57bcac09ef36e14655fc62691a021f588defd6fb", package = "foundry-config" }
    foundry-evm = { git = "https://github.com/foundry-rs/foundry", rev = "57bcac09ef36e14655fc62691a021f588defd6fb", package = "foundry-evm" }
    foundry-evm-traces = { git = "https://github.com/foundry-rs/foundry", rev = "57bcac09ef36e14655fc62691a021f588defd6fb", package = "foundry-evm-traces" }
    futures = "0.3.28"
    futures-util = "0.3.28"
    http = "1.1.0"
    http-body = "1.0.1"
    http-body-util = "0.1.2"
    hyper = { version = "1.5.0", features = ["full"] }
    hyper-rustls = "0.27.3"
    hyper-util = { version = "0.1.9", default-features = false, features = [
      "client-legacy",
      "tokio",
    ] }
    insta = "1.17"
    itertools = "0.13.0"
    js-sys = "0.3.72"
    jsonrpsee = { version = "0.24.7", features = [
      "server",
      "macros",
      "client",
    ] }
    lazy_static = "1.4.0"
    lightdotso-app = { path = "./crates/app" }
    lightdotso-autometrics = { path = "./crates/autometrics" }
    lightdotso-axum = { path = "./crates/axum" }
    lightdotso-billing = { path = "./crates/billing" }
    lightdotso-client = { path = "./crates/client" }
    lightdotso-common = { path = "./crates/common" }
    lightdotso-consumer = { path = "./crates/consumer" }
    lightdotso-constants = { path = "./crates/constants" }
    lightdotso-contracts = { path = "./crates/contracts" }
    lightdotso-covalent = { path = "./crates/covalent" }
    lightdotso-dag = { path = "./crates/dag" }
    lightdotso-desktop = { path = "./apps/desktop/src-tauri" }
    lightdotso-discord = { path = "./crates/discord" }
    lightdotso-db = { path = "./crates/db" }
    lightdotso-gas = { path = "./crates/gas" }
    lightdotso-graphql = { path = "./crates/graphql" }
    lightdotso-hyper = { path = "./crates/hyper" }
    lightdotso-indexer = { path = "./crates/indexer" }
    lightdotso-interpreter = { path = "./crates/interpreter" }
    lightdotso-jsonrpsee = { path = "./crates/jsonrpsee" }
    lightdotso-kafka = { path = "./crates/kafka" }
    lightdotso-keychain = { path = "./crates/indexer" }
    lightdotso-node = { path = "./crates/node" }
    lightdotso-notifier = { path = "./crates/notifier" }
    lightdotso-opentelemetry = { path = "./crates/opentelemetry" }
    lightdotso-paymaster = { path = "./crates/paymaster" }
    lightdotso-pusher = { path = "./crates/pusher" }
    lightdotso-polling = { path = "./crates/polling" }
    lightdotso-prometheus = { path = "./crates/prometheus" }
    lightdotso-prisma = { path = "./crates/prisma" }
    lightdotso-prisma-mysql = { path = "./crates/prisma-mysql" }
    lightdotso-prisma-postgres = { path = "./crates/prisma-postgres" }
    lightdotso-redis = { path = "./crates/redis" }
    lightdotso-routescan = { path = "./crates/routescan" }
    lightdotso-rpc = { path = "./crates/rpc" }
    lightdotso-sequence = { path = "./crates/sequence" }
    lightdotso-sqlx = { path = "./crates/sqlx" }
    lightdotso-signer = { path = "./crates/signer" }
    lightdotso-simulator = { path = "./crates/simulator" }
    lightdotso-state = { path = "./crates/state" }
    lightdotso-tauri = { path = "./crates/tauri" }
    lightdotso-telegram = { path = "./crates/telegram" }
    lightdotso-tracing = { path = "./crates/tracing" }
    lightdotso-utils = { path = "./crates/utils" }
    opentelemetry = { version = "0.26.0", features = ["metrics"] }
    opentelemetry-otlp = { version = "0.26.0", features = [
      "grpc-tonic",
      "reqwest-client",
      "tls",
      "tls-roots",
    ] }
    opentelemetry-prometheus = "0.17.0"
    opentelemetry-semantic-conventions = "0.26.0"
    opentelemetry_sdk = { version = "0.26.0", features = ["metrics"] }
    once_cell = "1.8.0"
    pin-project-lite = "0.2.13"
    prettyplease = "0.2.24"
    prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", features = [
      "migrations",
      "mocking",
      "sqlite",
      "sqlite-create-many",
    ] }
    prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11", features = [
      "migrations",
      "mocking",
      "sqlite",
      "sqlite-create-many",
    ] }
    prometheus = "0.13.3"
    rand = "0.8.5"
    rdkafka = { version = "0.36.2", features = ["sasl", "ssl"] }
    redb = "2.1.2"
    regress = "0.10.1"
    reqwest = { version = "0.12.8", features = [
      "blocking",
      "json",
      "stream",
    ], default-features = false }
    revm = { version = "14.0.3", default-features = false }
    revm-primitives = { version = "10.0.0", default-features = false }
    revm-inspectors = { version = "0.8.0", features = ["serde"] }
    rmp-serde = "1.1.2"
    rustc-hex = "2.1.0"
    rustls = { version = "0.23.15", default-features = false, features = [
      "ring",
      "logging",
      "std",
      "tls12",
    ] }
    serde = "1.0.183"
    serde_json = "1.0.113"
    serde_yaml = "0.9"
    spki = "0.7.2"
    sqlx = { version = "0.6.3", default-features = false, features = [
      "runtime-tokio-rustls",
      "macros",
      "postgres",
      "chrono",
      "bigdecimal",
    ] }
    strum = "0.26.3"
    strum_macros = "0.26.3"
    syn = "2.0.82"
    tauri = "2.0.5"
    tauri-build = { version = "2.0.1" }
    thiserror = "1.0.40"
    time = "0.3.36"
    tokio = { version = "1.39.3", features = ["full"] }
    tonic = { version = "0.12.2", features = ["tls", "tls-roots"] }
    tower = "0.5.1"
    tower-cookies = "0.10.0"
    tower_governor = "0.4.3"
    tower-http = { version = "0.6.1", features = [
      "trace",
      "auth",
      "request-id",
      "catch-panic",
      "cors",
      "set-header",
      "limit",
      "sensitive-headers",
    ] }
    tower-sessions = "0.13.0"
    tower-sessions-core = "0.13.0"
    tracing = "0.1.37"
    tracing-test = "0.2.4"
    uniffi = "0.28.1"
    uniffi_macros = "0.28.1"
    uniffi_build = { version = "0.28.1", features = ["builtin-bindgen"] }
    uuid = { version = "1.11.0", features = ["v4", "fast-rng", "serde"] }
    url = { version = "2.5.2", default-features = false }

[patch.crates-io]
  #   alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "5354223a22f9eca76df6697aefa165d8c48006cc" }
  #   alloy-contract = { git = "https://github.com/alloy-rs/alloy", rev = "5354223a22f9eca76df6697aefa165d8c48006cc" }
  #   alloy-eips = { git = "https://github.com/alloy-rs/alloy", rev = "5354223a22f9eca76df6697aefa165d8c48006cc" }
  #   alloy-genesis = { git = "https://github.com/alloy-rs/alloy", rev = "5354223a22f9eca76df6697aefa165d8c48006cc" }
  #   alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy", rev = "5354223a22f9eca76df6697aefa165d8c48006cc" }
  #   alloy-network = { git = "https://github.com/alloy-rs/alloy", rev = "5354223a22f9eca76df6697aefa165d8c48006cc" }
  #   alloy-provider = { git = "https://github.com/alloy-rs/alloy", rev = "5354223a22f9eca76df6697aefa165d8c48006cc" }
  #   alloy-pubsub = { git = "https://github.com/alloy-rs/alloy", rev = "5354223a22f9eca76df6697aefa165d8c48006cc" }
  #   alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy", rev = "5354223a22f9eca76df6697aefa165d8c48006cc" }
  #   alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy", rev = "5354223a22f9eca76df6697aefa165d8c48006cc" }
  #   alloy-serde = { git = "https://github.com/alloy-rs/alloy", rev = "5354223a22f9eca76df6697aefa165d8c48006cc" }
  #   alloy-signer = { git = "https://github.com/alloy-rs/alloy", rev = "5354223a22f9eca76df6697aefa165d8c48006cc" }
  #   alloy-signer-aws = { git = "https://github.com/alloy-rs/alloy", rev = "5354223a22f9eca76df6697aefa165d8c48006cc" }
  #   alloy-signer-gcp = { git = "https://github.com/alloy-rs/alloy", rev = "5354223a22f9eca76df6697aefa165d8c48006cc" }
  #   alloy-signer-ledger = { git = "https://github.com/alloy-rs/alloy", rev = "5354223a22f9eca76df6697aefa165d8c48006cc" }
  #   alloy-signer-local = { git = "https://github.com/alloy-rs/alloy", rev = "5354223a22f9eca76df6697aefa165d8c48006cc" }
  #   alloy-signer-trezor = { git = "https://github.com/alloy-rs/alloy", rev = "5354223a22f9eca76df6697aefa165d8c48006cc" }
  #   alloy-transport = { git = "https://github.com/alloy-rs/alloy", rev = "5354223a22f9eca76df6697aefa165d8c48006cc" }
  #   alloy-transport-http = { git = "https://github.com/alloy-rs/alloy", rev = "5354223a22f9eca76df6697aefa165d8c48006cc" }
  #   alloy-transport-ipc = { git = "https://github.com/alloy-rs/alloy", rev = "5354223a22f9eca76df6697aefa165d8c48006cc" }
  #   alloy-transport-ws = { git = "https://github.com/alloy-rs/alloy", rev = "5354223a22f9eca76df6697aefa165d8c48006cc" }
