[project]
  name = "lightdotso"
  version = "0.1.0"
  description = "Add your description here"
  authors = [{ name = "Shun Kakinoki", email = "shunkakinoki@gmail.com" }]
  readme = "README.md"
  requires-python = ">= 3.11"
  dependencies = [
    "halmos <= 0.0.8",
    "slither-analyzer <= 0.9.6",
    "setuptools>=68.0.0",
    "pusher>=3.3.2",
    "python-dotenv>=1.0.0",
  ]

  [project.scripts]
    hello = "lightdotso:hello"

[build-system]
  requires = ["hatchling"]
  build-backend = "hatchling.build"

[tool.rye]
  managed = true
  dev-dependencies = []

[tool.hatch.metadata]
  allow-direct-references = true

[tool.hatch.build.targets.wheel]
  packages = ["src/lightdotso"]
