[project]
  name = "lightdotso"
  version = "0.1.0"
  description = "Add your description here"
  authors = [{ name = "Shun Kakinoki", email = "shunkakinoki@gmail.com" }]
  readme = "README.md"
  requires-python = ">= 3.11"
  dependencies = [
    "halmos <= 0.0.8",
    "slither-analyzer <= 0.9.6",
    "setuptools>=68.0.0",
    "pusher>=3.3.2",
    "python-dotenv>=1.0.0",
    "langchain>=0.1.0",
    "openai>=1.7.0",
    "langsmith>=0.0.78",
    "langserve[all]>=0.0.39",
    "langchain-community>=0.0.13",
    "gunicorn>=21.2.0",
    "graphviz>=0.20.3",
]

  [project.scripts]
    hello = "lightdotso:hello"

[build-system]
  requires = ["hatchling"]
  build-backend = "hatchling.build"

[tool.rye]
  managed = true
  dev-dependencies = ["notebook>=7.0.6", "nbqa>=1.7.1"]

[tool.hatch.metadata]
  allow-direct-references = true

[tool.hatch.build.targets.wheel]
  packages = ["src/lightdotso"]

[tool.ruff]
  extend-include = ["*.ipynb"]
