[package]
  name = "lightdotso-app"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[dependencies]
  lazy_static = { workspace = true }
  lightdotso-prisma = { workspace = true }
  platform-dirs = "0.3.0"
  tokio = { workspace = true }
