[package]
  name = "lightdotso-axum"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[dependencies]
  autometrics = { workspace = true }
  axum = { workspace = true }
  axum-tracing-opentelemetry = "0.13.1"
  clap = { workspace = true }
  ethers-main = { workspace = true }
  eyre = { workspace = true }
  governor = "0.5.1"
  http = { workspace = true }
  http-body = { workspace = true }
  hyper = { workspace = true }
  hyper-rustls = { workspace = true }
  lightdotso-db = { workspace = true }
  lightdotso-indexer = { workspace = true }
  lightdotso-prisma = { workspace = true }
  lightdotso-prometheus = { workspace = true }
  lightdotso-redis = { workspace = true }
  lightdotso-rpc = { workspace = true }
  lightdotso-tracing = { workspace = true }
  prisma-client-rust = { workspace = true }
  serde = { workspace = true, features = ["derive"] }
  serde_json = { workspace = true }
  tokio = { workspace = true }
  tower = { workspace = true, features = [
    "full",
    "util",
    "timeout",
    "load-shed",
    "limit",
  ] }
  tower-http = { workspace = true, features = ["cors"] }
  tower_governor = { workspace = true }
  utoipa = { version = "3.5.0", features = ["axum_extras"] }
  utoipa-rapidoc = { version = "0.1.0", features = ["axum"] }
  utoipa-redoc = { version = "0.1.0", features = ["axum"] }
  utoipa-swagger-ui = { version = "3.1.5", features = ["axum"] }
