[package]
  name = "lightdotso-axum"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[dependencies]
  autometrics = { workspace = true }
  axum = { workspace = true }
  axum-tracing-opentelemetry = "0.14.1"
  clap = { workspace = true }
  const-hex = { workspace = true }
  ethers-main = { workspace = true }
  eyre = { workspace = true }
  governor = "0.6.0"
  http = { workspace = true }
  http-body = { workspace = true }
  hyper = { workspace = true }
  hyper-rustls = { workspace = true }
  lightdotso-common = { workspace = true }
  lightdotso-contracts = { workspace = true }
  lightdotso-db = { workspace = true }
  lightdotso-indexer = { workspace = true }
  lightdotso-paymaster = { workspace = true }
  lightdotso-prisma = { workspace = true }
  lightdotso-prometheus = { workspace = true }
  lightdotso-redis = { workspace = true }
  lightdotso-rpc = { workspace = true }
  lightdotso-solutions = { workspace = true }
  lightdotso-tracing = { workspace = true }
  prisma-client-rust = { workspace = true }
  rundler-types = { workspace = true }
  rustc-hex = { workspace = true }
  serde = { workspace = true, features = ["derive"] }
  serde_json = { workspace = true }
  tokio = { workspace = true }
  tower = { workspace = true, features = [
    "full",
    "util",
    "timeout",
    "load-shed",
    "limit",
  ] }
  tower-http = { workspace = true, features = ["cors"] }
  tower_governor = { workspace = true }
  utoipa = { version = "4.0.0", features = ["axum_extras"] }
  utoipa-rapidoc = { version = "1.0.0", features = ["axum"] }
  utoipa-redoc = { version = "1.0.0", features = ["axum"] }
  utoipa-swagger-ui = { version = "4.0.0", features = ["axum"] }
