[package]
  name = "lightdotso-axum"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[dependencies]
  alloy = { workspace = true }
  async-trait = { workspace = true }
  autometrics = { workspace = true }
  axum = { workspace = true }
  axum-extra = { version = "0.9.3", features = ["typed-header"] }
  axum-tracing-opentelemetry = "0.21.1"
  clap = { workspace = true }
  eyre = { workspace = true }
  governor = "0.6.3"
  http = { workspace = true }
  http-body = { workspace = true }
  hyper = { workspace = true }
  hyper-rustls = { workspace = true }
  lazy_static = { workspace = true }
  lightdotso-common = { workspace = true }
  lightdotso-constants = { workspace = true }
  lightdotso-contracts = { workspace = true }
  lightdotso-db = { workspace = true }
  lightdotso-hyper = { workspace = true }
  lightdotso-indexer = { workspace = true }
  lightdotso-interpreter = { workspace = true }
  lightdotso-kafka = { workspace = true }
  lightdotso-notifier = { workspace = true }
  lightdotso-opentelemetry = { workspace = true }
  lightdotso-paymaster = { workspace = true }
  lightdotso-prisma = { workspace = true }
  lightdotso-prometheus = { workspace = true }
  lightdotso-redis = { workspace = true }
  lightdotso-rpc = { workspace = true }
  lightdotso-sequence = { workspace = true }
  lightdotso-simulator = { workspace = true }
  lightdotso-tracing = { workspace = true }
  lightdotso-utils = { workspace = true }
  prisma-client-rust = { workspace = true }
  rand = { workspace = true }
  reqwest = { workspace = true }
  rmp-serde = { workspace = true }
  rustc-hex = { workspace = true }
  serde = { workspace = true, features = ["derive"] }
  serde_json = { workspace = true }
  siwe = { version = "0.6.0", features = ["serde"] }
  thiserror = { workspace = true }
  time = { workspace = true }
  tokio = { workspace = true }
  tower = { workspace = true, features = [
    "full",
    "util",
    "timeout",
    "load-shed",
    "limit",
  ] }
  tower-cookies = { workspace = true }
  tower-http = { workspace = true, features = ["cors"] }
  tower-sessions = { workspace = true }
  tower-sessions-core = { workspace = true }
  tower_governor = { workspace = true }
  utoipa = { version = "4.0.0", features = ["axum_extras"] }
  utoipa-rapidoc = { version = "4.0.0", features = ["axum"] }
  utoipa-redoc = { version = "4.0.0", features = ["axum"] }
  utoipa-swagger-ui = { version = "7.1.0", features = ["axum"] }
