[package]
  name = "lightdotso-bundler"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[dependencies]
  async-trait = { workspace = true }
  clap = { workspace = true, features = ["derive"] }
  ethers = { workspace = true }
  ethers-providers = { workspace = true }
  expanded-pathbuf = "0.1"
  eyre = { workspace = true }
  jsonrpsee = { workspace = true }
  lazy_static = { workspace = true }
  lightdotso-jsonrpsee = { workspace = true }
  lightdotso-tracing = { workspace = true }
  pin-utils = "0.1"
  silius-grpc = { workspace = true }
  silius-primitives = { workspace = true }
  silius-rpc = { workspace = true }
  tokio = { workspace = true, features = ["full"] }
