[package]
  name = "lightdotso-bundler"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[dependencies]
  async-trait = { workspace = true }
  clap = { workspace = true, features = ["derive"] }
  enumset = { workspace = true }
  ethers = "2.0.8"
  expanded-pathbuf = "0.1"
  eyre = { workspace = true }
  jsonrpsee = { workspace = true }
  lazy_static = { workspace = true }
  lightdotso-contracts = { workspace = true }
  lightdotso-jsonrpsee = { workspace = true }
  lightdotso-tracing = { workspace = true }
  pin-utils = "0.1"
  rundler-sim = { workspace = true }
  rundler-types = { workspace = true }
  serde = { workspace = true }
  serde_json = { workspace = true }
  tokio = { workspace = true, features = ["full"] }
