[package]
  name = "lightdotso-client"

  version.workspace = true
  edition.workspace = true
  rust-version.workspace = true
  license.workspace = true
  homepage.workspace = true
  repository.workspace = true

[dependencies]
  backon = { workspace = true }
  eyre = { workspace = true }
  http = { workspace = true }
  lazy_static = { workspace = true }
  lightdotso-common = { workspace = true }
  reqwest = { workspace = true }
  serde = { workspace = true }
  serde_json = { workspace = true }
